--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 <!-- ========== FOOTER ========== -->
     <footer style="background-color: #222; color: #eee; padding: 20px; text-align: center; font-family: sans-serif;">
       <p>
-        For more cool stuff, go to <a href="http://zeebie.net" target="_blank" style="color: #00bfff; text-decoration: none;">zeebie.net</a>... if my server is turned on. Sometimes its not.
+        For more cool stuff, go to <a href="http://zeebie.net" target="_blank" style="color: #00bfff; text-decoration: none;">zeebie.net</a>... if my server is turned on. Sometimes it's not.
       </p>
     </footer>
     <!-- End of Footer --> 
