--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             <a href="pipeline-estimator/index.html" class="menu-button">
                 Piping Estimator
             </a>
+            
+             <!-- Button 3: Brave Browser in RAM -->
+            <a href="brave/brave.html" class="menu-button">
+                Brave Browser in RAM tutorial
+            </a>
         </div>
     </main>
 
