--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             <a href="brave/brave.html" class="menu-button">
                 Brave Browser in RAM tutorial
             </a>
+
+            <!-- Button 4: Arch Linux Tutorial: Dual 4k Monitor Spanned Wallpaper Slideshow -->
+            <a href="wallpaper/wallpaper.html" class="menu-button">
+                Arch Linux Tutorial: Dual 4k Monitor Spanned Wallpaper Slideshow
+            </a>
         </div>
     </main>
 
